src/test/resources/regressions/features/sets/set-literal-fail7.gobra
package pkg

func foo() {
  // error: set literals cannot have keys
  //:: ExpectedOutput(type_error)
  ghost s := set[bool] { 0 : false }
}
